--- a/index.html
+++ b/index.html
@@ -101,9 +101,11 @@
             </div>
 
         </section>
+        <span class="eu">Feito por <a href="https://devtinel.github.io/">DevTinel</a></span>
         </footer>
 
 
     <script src="https://kit.fontawesome.com/227045f519.js" crossorigin="anonymous"></script>
+
 </body>
 </html>
