--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
             </div>
 
         </section>
-        <span class="eu">Feito por <a href="https://devtinel.github.io/">DevTinel</a></span>
+        <span class="eu">Feito por <a target="_blank" href="https://devtinel.github.io/">DevTinel</a></span>
         </footer>
 
 
