--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@900&display=swap" rel="stylesheet">
+<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
 </head>
 <body>
     <header class="navbar-container">
@@ -20,21 +21,32 @@
                 <a href="./"><img class="img" src="logo-size.svg" alt=""></a>
             </div>
             <div>
-                <ul class="mobile">
-                <li><a target="_blank" href="https://www.spotify.com/br/premium/">Premium</a></li>
-                <li><a target="_blank" href="https://support.spotify.com/br/?_gl=1*1r4zjj9*_gcl_aw*R0NMLjE2NTQ0NTcyMzguQ2owS0NRandxUEdVQmhEd0FSSXNBTk53alY1dHVDbE1WOEhXbWlhcGUyOXp4QjY4Uy1IZVpKUEhVYnVjNGhiNHI2VDBvb2ZLZEY2LTR6NGFBcTA0RUFMd193Y0I.*_gcl_dc*R0NMLjE2NTQ0NTcyMzguQ2owS0NRandxUEdVQmhEd0FSSXNBTk53alY1dHVDbE1WOEhXbWlhcGUyOXp4QjY4Uy1IZVpKUEhVYnVjNGhiNHI2VDBvb2ZLZEY2LTR6NGFBcTA0RUFMd193Y0I.">Suporte</a></li>
-                <li><a class="efeito" target="_blank" href="https://www.spotify.com/br/download/windows/">Baixar</a></li>
-                <li><a target="_blank" href="https://www.spotify.com/br/signup">Inscrever-se</a></li>
-                <li><a target="_blank" href="https://accounts.spotify.com/pt-BR/login/?continue=https%3A//open.spotify.com/__noul__%3Fl2l%3D1%26nd%3D1&_locale=pt-BR">Entrar</a></li>
+                <div class="nav-mob">                       
+                    <a href="./" aria-controls="mobile-itens"> <img src="logo-size.svg"></a>
+                    <a data-button href=""><span class="material-symbols-outlined">
+                        menu
+                        </span></a>
+                </div>
+                <div class="mobile ">
+                    <ul class="mobile-itens ">
+                    <li><a target="_blank" href="https://www.spotify.com/br/premium/">Premium</a></li>
+                    <li><a target="_blank" href="https://support.spotify.com/br/?_gl=1*1r4zjj9*_gcl_aw*R0NMLjE2NTQ0NTcyMzguQ2owS0NRandxUEdVQmhEd0FSSXNBTk53alY1dHVDbE1WOEhXbWlhcGUyOXp4QjY4Uy1IZVpKUEhVYnVjNGhiNHI2VDBvb2ZLZEY2LTR6NGFBcTA0RUFMd193Y0I.*_gcl_dc*R0NMLjE2NTQ0NTcyMzguQ2owS0NRandxUEdVQmhEd0FSSXNBTk53alY1dHVDbE1WOEhXbWlhcGUyOXp4QjY4Uy1IZVpKUEhVYnVjNGhiNHI2VDBvb2ZLZEY2LTR6NGFBcTA0RUFMd193Y0I.">Suporte</a></li>
+                    <li><a class="efeito" target="_blank" href="https://www.spotify.com/br/download/windows/">Baixar</a></li>
+                    <li><a target="_blank" href="https://www.spotify.com/br/signup">Inscrever-se</a></li>
+                    <li><a target="_blank" href="https://accounts.spotify.com/pt-BR/login/?continue=https%3A//open.spotify.com/__noul__%3Fl2l%3D1%26nd%3D1&_locale=pt-BR">Entrar</a></li>
+                    </ul>
+                </div>
+                <div  class="menu-nav" >
                     
-                </ul>
-            <ul class="itens">
-                <li><a target="_blank" href="https://www.spotify.com/br/premium/">Premium</a></li>
-                <li><a target="_blank" href="https://support.spotify.com/br/?_gl=1*1r4zjj9*_gcl_aw*R0NMLjE2NTQ0NTcyMzguQ2owS0NRandxUEdVQmhEd0FSSXNBTk53alY1dHVDbE1WOEhXbWlhcGUyOXp4QjY4Uy1IZVpKUEhVYnVjNGhiNHI2VDBvb2ZLZEY2LTR6NGFBcTA0RUFMd193Y0I.*_gcl_dc*R0NMLjE2NTQ0NTcyMzguQ2owS0NRandxUEdVQmhEd0FSSXNBTk53alY1dHVDbE1WOEhXbWlhcGUyOXp4QjY4Uy1IZVpKUEhVYnVjNGhiNHI2VDBvb2ZLZEY2LTR6NGFBcTA0RUFMd193Y0I.">Suporte</a></li>
-                <li><a class="efeito" target="_blank" href="https://www.spotify.com/br/download/windows/">Baixar</a></li>
-                <li><a target="_blank" href="https://www.spotify.com/br/signup">Inscrever-se</a></li>
-                <li><a target="_blank" href="https://accounts.spotify.com/pt-BR/login/?continue=https%3A//open.spotify.com/__noul__%3Fl2l%3D1%26nd%3D1&_locale=pt-BR">Entrar</a></li>
-            </ul>
+                    <ul class="itens" >
+                        <li><a target="_blank" href="https://www.spotify.com/br/premium/">Premium</a></li>
+                        <li><a target="_blank" href="https://support.spotify.com/br/?_gl=1*1r4zjj9*_gcl_aw*R0NMLjE2NTQ0NTcyMzguQ2owS0NRandxUEdVQmhEd0FSSXNBTk53alY1dHVDbE1WOEhXbWlhcGUyOXp4QjY4Uy1IZVpKUEhVYnVjNGhiNHI2VDBvb2ZLZEY2LTR6NGFBcTA0RUFMd193Y0I.*_gcl_dc*R0NMLjE2NTQ0NTcyMzguQ2owS0NRandxUEdVQmhEd0FSSXNBTk53alY1dHVDbE1WOEhXbWlhcGUyOXp4QjY4Uy1IZVpKUEhVYnVjNGhiNHI2VDBvb2ZLZEY2LTR6NGFBcTA0RUFMd193Y0I.">Suporte</a></li>
+                        <li><a class="efeito" target="_blank" href="https://www.spotify.com/br/download/windows/">Baixar</a></li>
+                        <li><a target="_blank" href="https://www.spotify.com/br/signup">Inscrever-se</a></li>
+                        <li><a target="_blank" href="https://accounts.spotify.com/pt-BR/login/?continue=https%3A//open.spotify.com/__noul__%3Fl2l%3D1%26nd%3D1&_locale=pt-BR">Entrar</a></li>
+                    </ul>
+                </div>
+                    
 
             </div>
         </nav>
@@ -115,5 +127,6 @@
 
     <script src="https://kit.fontawesome.com/227045f519.js" crossorigin="anonymous"></script>
 
+<script src="index.js"></script>
 </body>
 </html>
