--- a/index.html
+++ b/index.html
@@ -128,5 +128,6 @@
     <script src="https://kit.fontawesome.com/227045f519.js" crossorigin="anonymous"></script>
 
 <script src="index.js"></script>
+<script src="./js/plugins/simple-anime.js"></script>
 </body>
 </html>
