--- a/index.html
+++ b/index.html
@@ -28,12 +28,12 @@
                         </span></a>
                 </div>
                 <div class="mobile ">
-                    <ul class="mobile-itens ">
+                    <ul class="mobile-itens">
                     <li><a  target="_blank" href="https://www.spotify.com/br/premium/">Premium</a></li>
                     <li><a target="_blank" href="https://support.spotify.com/br/?_gl=1*1r4zjj9*_gcl_aw*R0NMLjE2NTQ0NTcyMzguQ2owS0NRandxUEdVQmhEd0FSSXNBTk53alY1dHVDbE1WOEhXbWlhcGUyOXp4QjY4Uy1IZVpKUEhVYnVjNGhiNHI2VDBvb2ZLZEY2LTR6NGFBcTA0RUFMd193Y0I.*_gcl_dc*R0NMLjE2NTQ0NTcyMzguQ2owS0NRandxUEdVQmhEd0FSSXNBTk53alY1dHVDbE1WOEhXbWlhcGUyOXp4QjY4Uy1IZVpKUEhVYnVjNGhiNHI2VDBvb2ZLZEY2LTR6NGFBcTA0RUFMd193Y0I.">Suporte</a></li>
                     <li><a class="efeito" target="_blank" href="https://www.spotify.com/br/download/windows/">Baixar</a></li>
-                    <li><a target="_blank" href="https://www.spotify.com/br/signup">Inscrever-se</a></li>
-                    <li><a target="_blank" href="https://accounts.spotify.com/pt-BR/login/?continue=https%3A//open.spotify.com/__noul__%3Fl2l%3D1%26nd%3D1&_locale=pt-BR">Entrar</a></li>
+                    <li><a class="letrap" target="_blank" href="https://www.spotify.com/br/signup">Inscrever-se</a></li>
+                    <li><a class='letrap' target="_blank" href="https://accounts.spotify.com/pt-BR/login/?continue=https%3A//open.spotify.com/__noul__%3Fl2l%3D1%26nd%3D1&_locale=pt-BR">Entrar</a></li>
                     </ul>
                 </div>
                 <div  class="menu-nav" >
