--- a/index.html
+++ b/index.html
@@ -34,7 +34,9 @@
                     <li><a class="efeito" target="_blank" href="https://www.spotify.com/br/download/windows/">Baixar</a></li>
                     <li><a class="letrap" target="_blank" href="https://www.spotify.com/br/signup">Inscrever-se</a></li>
                     <li><a class='letrap' target="_blank" href="https://accounts.spotify.com/pt-BR/login/?continue=https%3A//open.spotify.com/__noul__%3Fl2l%3D1%26nd%3D1&_locale=pt-BR">Entrar</a></li>
-                    </ul>
+                    <a href="./" aria-controls="mobile-itens"> <img src="logo-size.svg"></a>
+                        
+                </ul>
                 </div>
                 <div  class="menu-nav" >
                     
