--- a/index.html
+++ b/index.html
@@ -22,10 +22,13 @@
             </div>
             <div>
                 <div class="nav-mob">                       
-                    <a href="./" aria-controls="mobile-itens"> <img src="logo-size.svg"></a>
-                    <a data-button href=""><span class="material-symbols-outlined">
-                        menu
-                        </span></a>
+                    <a class="logo" href="./" aria-controls="mobile-itens"> <img src="logo-size.svg"></a>
+                    <div data-button class="hamburguer">
+                        <span class="hamb item1"></span>
+                        <span class="hamb item2"></span>
+                        <span class="hamb item3"></span>
+                    </div>
+                 
                 </div>
                 <div class="mobile ">
                     <ul class="mobile-itens">
